# metroforge-native

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MOONSHOT_1.0.md  README.md  deny.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
content/scenarios/: manifest.json
crates/mf-game/: Cargo.toml  build.rs
crates/mf-game/assets/fonts/: OFL.txt
crates/mf-game/assets/models/: bridge_brooklyn.glb  bridge_suspension.glb  bridge_truss.glb  bus.glb  cars.glb  cloud_puffs.glb  portal_tunnel.glb  rail.glb  rail_bridge.glb  train_metro.glb  tram.glb  viaduct_rail.glb  viaduct_road.glb
crates/mf-game/fixtures/saves/: v0_legacy.json  v1_canonical.json
crates/mf-game/src/: app_icon.rs  atmosphere_shots.rs  attract.rs  audio.rs  build_ui.rs  camera.rs  campaign.rs  city_catalog.rs  city_select.rs  command_bus.rs  config.rs  crash.rs  crash_report.rs  debug_overlay.rs  design_system.rs  egui_idle.rs  goals.rs  graphics_perf.rs  hud.rs  input.rs  main.rs  map_mode.rs  map_paint.rs  minimap.rs  overlays.rs  panels.rs  paths.rs  perf.rs  photomode.rs  promo.rs  quality_boot.rs  report_ui.rs  reveal_input.rs  routes_panel.rs  saves.rs  scenarios.rs  seam_shots.rs  shortcuts.rs  sidecar_kill_test.rs  single_instance.rs  (+8 more)
crates/mf-game/src/audio/: mod.rs  synth.rs
crates/mf-net/: Cargo.toml
crates/mf-net/src/: cities.rs  embedded.rs  host.rs  lib.rs  plugin.rs  reconnect.rs  sidecar.rs  transport.rs  ws_transport.rs
crates/mf-net/tests/: live_sidecar.rs  osm_city.rs
crates/mf-protocol/: Cargo.toml
crates/mf-protocol/src/: binary.rs  envelope.rs  lib.rs  types.rs
crates/mf-protocol/tests/: geology.rs  ops.rs  roundtrip.rs  simdepth.rs  weather.rs
crates/mf-render/: Cargo.toml
crates/mf-render/src/: agents.rs  atmosphere.rs  bridges.rs  buildings.rs  cloud.wgsl  daynight.rs  diorama.rs  facade.wgsl  geology.rs  lib.rs  mesh_utils.rs  models.rs  outline.rs  outline.wgsl  palette.rs  perf.rs  photomode.rs  precip.rs  precip.wgsl  reveal.rs  reveal.wgsl  reveal_prepass.wgsl  roads.rs  sky.rs  sky.wgsl  stats.rs  street_lamps.rs  structures.rs  subway.rs  terrain.rs  terrain_cloud.wgsl  terrain_material.rs  traffic.rs  transit.rs  trees.rs  vehicle_models.rs  vehicles.rs  water.rs  water.wgsl  weather_render.rs
crates/mf-sim/: Cargo.toml  PORT.md
crates/mf-sim/examples/: p2_metrics.rs
crates/mf-sim/src/: analytics.rs  commands.rs  constants.rs  events.rs  fields.rs  geology.rs  geology_cost.rs  geometry.rs  hash.rs  lib.rs  new_game.rs  replay.rs  rng.rs  save.rs  sim.rs  state.rs  types.rs  weather.rs  weather_effects.rs
crates/mf-sim/src/city/: generator.rs  mod.rs  names.rs  osm.rs  presets.rs  streamlines.rs  tensor.rs
crates/mf-sim/src/ops/: depot.rs  mod.rs  periods.rs  tests.rs  tunables.rs
crates/mf-sim/src/scenario/: catalog.rs  evaluate.rs  events.rs  mod.rs  progression.rs
crates/mf-sim/src/transit/: assignment.rs  build.rs  cohorts.rs  grade_effects.rs  mod.rs  road_graph.rs  route_path.rs  time_of_day.rs  traffic.rs
crates/mf-sim/tests/: determinism.rs  env_parity.rs  full_tick.rs  transit.rs  worldgen.rs
crates/mf-state/: Cargo.toml
crates/mf-state/src/: attract.rs  city.rs  colorblind.rs  day_night.rs  demand.rs  fields.rs  frame.rs  geology.rs  height.rs  lib.rs  overlay.rs  plugin.rs  quality.rs  reveal.rs  route_focus.rs  subway.rs  theme.rs  traffic.rs  ui.rs  weather.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  KNOWN-ISSUES.md  PROTOCOL.md  RELEASE-NOTES-0.5.0.md  RELEASE_NOTES_1.0.0.md
docs/quality-tiers/: README.md
packaging/: icon.icns
packaging/linux/: metroforge.desktop
packaging/macos/: Info.plist
packaging/windows/: installer.nsi
scripts/: check-strings-dashes.sh  dump_atmosphere_noise.py  gen-icons.py  package.sh  tier-smoke.sh
sim/: .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
sim/scripts/: add-elevation.ts  build-cities.ts  check-road-water-alignment.ts  dem.ts  extract-water.ts  geo-utils.ts  height-join.ts  perf-harness.ts  png.ts  run-build-cities.ts  run-height-join.ts  shapefile.d.ts  validate-scenarios.ts  viz-road-water-alignment.ts
sim/sidecar/: README.md  cities.ts  index.ts  simHost.ts  smoke-test.ts  tsconfig.json  wire.ts
sim/src/content/: campaign.ts  daily.ts  scenarioRegistry.ts
sim/src/content/scenarios/: cleveland-austerity.json  cleveland-farebox-30.json  cleveland-farebox-80.json  cleveland-first-riders.json  cleveland-five-hundred.json  cleveland-reach.json  cleveland-roadworks.json  cleveland-tram-line.json  nyc-bus-spine.json  nyc-dig-season.json  nyc-express.json  nyc-farebox-80.json  nyc-first-thousand.json  nyc-last-stand.json  nyc-pressure.json  progression.json  progression.schema.json  scenario.schema.json
sim/src/core/: analytics.ts  commands.ts  constants.ts  economy.ts  events.ts  fields.ts  geology.ts  geologyCost.ts  geometry.ts  instance.ts  newGame.ts  replay.ts  rng.ts  save.ts  scenarioRules.ts  sim.ts  timeOfDay.ts  types.ts  weather.ts  weatherEffects.ts
sim/src/core/city/: generator.ts  names.ts  osmCity.ts  osmRegistry.ts  presets.ts  streamlines.ts  tensor.ts
sim/src/core/ops/: index.ts  periods.ts  tunables.ts
sim/src/core/scenario/: catalog.ts  evaluate.ts  events.ts  index.ts  progression.ts  types.ts
sim/src/core/transit/: assignment.ts  cohorts.ts  gradeEffects.ts  (+3 more)
sim/src/host/: agents.ts  client.ts  protocol.ts  sim.worker.ts  staticCityWire.ts  uiExtras.ts
sim/test/: analytics.test.ts  cohorts.test.ts  determinism.test.ts  economy.test.ts  geology.test.ts  gradeSpeed.test.ts  ops.test.ts  roadWaterAlignment.test.ts  scenarioEngine.test.ts  timeOfDay.test.ts  uiExtras.test.ts  vehicles.test.ts  weather.test.ts
sim/test/__snapshots__/: geology.test.ts.snap  weather.test.ts.snap
target-local/: .rustc_info.json
tools/blender/: README.md  gen_bridge.py  gen_bus.py  gen_cars.py  gen_clouds.py  gen_rail.py  gen_rail_bridge.py  gen_rail_viaduct.py  gen_train.py  gen_tram.py  gen_truss.py  gen_tunnel.py  gen_viaduct.py  make-assets.sh  turntable.py
tools/blender/mf_bpy/: __init__.py
(+72 files in other folders)
