[workspace]
resolver = "2"
members = [
    "crates/mf-protocol",
    "crates/mf-net",
    "crates/mf-state",
    "crates/mf-render",
    "crates/mf-game",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
# mf-net/mf-state only need ECS + the Plugin/App scaffolding (Resource/Event
# derive, systems, schedules) — depending on the small subcrates directly
# instead of the full `bevy` facade keeps their compile times down.
bevy_app = "0.16"
bevy_ecs = "0.16"
# `mf-state` needs `Vec2` for `RevealState` (shared between mf-game's input
# driver and mf-render's shader-uniform sync); `bevy_math` is the same small
# subcrate `bevy`'s facade re-exports it from, so this stays type-identical
# with `bevy::prelude::Vec2` without pulling in the full `bevy` crate.
bevy_math = "0.16"
bevy_egui = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
tungstenite = "0.24"
bytemuck = "1"
directories = "5"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

mf-protocol = { path = "crates/mf-protocol" }
mf-net = { path = "crates/mf-net" }
mf-state = { path = "crates/mf-state" }
mf-render = { path = "crates/mf-render" }

# Keep incremental debug builds fast; release still optimized for the shipped binary.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
