[package]
name = "mf-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MetroForge Native game shell (binary `metroforge`): Boot -> ConnectingSim -> MainMenu -> Loading -> InGame."

[[bin]]
name = "metroforge"
path = "src/main.rs"

[dependencies]
mf-protocol = { workspace = true }
mf-net = { workspace = true }
mf-state = { workspace = true }
mf-render = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }
# Device probe only (`default_output_device`) so headless CI/servers can skip
# playback without panicking. Version matches bevy_audio → rodio → cpal.
cpal = "0.15"

[dependencies.bevy]
workspace = true
# Default features include `bevy_audio` (required for procedural SFX/ambience).
# We synthesize PCM at runtime and never load vorbis/ogg assets, but leaving
# the default feature set intact keeps the rest of the engine (render, winit,
# etc.) working; vorbis being present is unused, not harmful.
default-features = true
