[package]
name = "mf-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MetroForge Native game shell (binary `metroforge`): Boot -> ConnectingSim -> MainMenu -> Loading -> InGame."
build = "build.rs"

[[bin]]
name = "metroforge"
path = "src/main.rs"

[dependencies]
mf-protocol = { workspace = true }
mf-net = { workspace = true }
mf-state = { workspace = true }
mf-render = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }

[dependencies.bevy]
workspace = true
default-features = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0"
