[package]
name = "mf-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sim transport and host bridge for the embedded Rust sim."

[dependencies]
mf-protocol = { workspace = true }
mf-sim = { workspace = true, features = ["serde"] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
