[package]
name = "mf-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure wire-protocol types shared with the MetroForge TypeScript sidecar (no Bevy dependency)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
