[package]
name = "mf-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

# Pure deterministic simulation core. Intentionally NO bevy / no rendering / no
# I/O dependencies: this crate is the native Rust port of the TypeScript sim in
# `sim/src/core`, meant to run in-process (replacing the Bun sidecar). Keep it
# std-only plus optional serde so it stays trivially portable and auditable.
[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
